examples/kju/positive/_future_ideas/extended_arythmetic/multiplication_and_division.kju
fun kju():Unit{
	var x:Int=6/3;
	var y:Int=7/3;
}