examples/kju/negative/parser/assignment_to_expression.kju
fun kju (): Unit {
    4 * 6 = 5;
}
